--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -5,4 +5,14 @@ spring:
     driver-class-name: com.mysql.cj.jdbc.Driver
     username: userCenter
     password: 1111
-    url: jdbc:mysql://localhost/userCenter?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai&useSSL=false
+    url: jdbc:mysql://118.25.75.77/userCenter?useUnicode=true&characterEncoding=UTF-8&autoReconnect=true&serverTimezone=Asia/Shanghai&useSSL=false
+  session:
+    redis:
+      repository-type: default
+    timeout: 604800s      #设置redis中session的过期时间
+  data:
+    redis:
+      port: 6379
+      host: 118.25.75.77
+      password: 1111
+      database: 0
