--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,6 +14,7 @@ spring:
     redis:
       port: 6379
       host: localhost
+      password: 1111
       database: 0
 
 server:
@@ -26,7 +27,7 @@ server:
         http-only: true             # 仅 HTTP 访问
         secure: false               # 如果使用 HTTPS，设置为 true
         same-site: lax              # SameSite 属性
-  address: 0.0.0.0
+  address: 0.0.0.0                  # 监听所有 IP 地址
 
 
 
