--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,7 +33,7 @@ server:
 
 mybatis-plus:
   configuration:
-    map-underscore-to-camel-case: false    # 开启驼峰命名
+    map-underscore-to-camel-case: false    # 不开启驼峰命名
   mapper-locations: classpath*:mapper/*.xml
   type-aliases-package: com.cosmos.friendsMatching.pojo   # 实体扫描，多个package用逗号或者分号分隔
   global-config:
